Fix displayig authentication-form on smaller mobile resulutions

--- a/ClientWebApp/src/app/authentication/authentication-form/authentication-form.component.scss
+++ b/ClientWebApp/src/app/authentication/authentication-form/authentication-form.component.scss
@@ -7,21 +7,19 @@
 }
 
 .container {
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: auto;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   padding: 1rem;
 
   @include respond-to(medium) {
     width: 45%;
-    height: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 }
 
